SandBox-2/force-app/main/default/objects/pvEmailBatchConf__mdt/fields/EventQuery__c.field-meta.xml
<CustomField>
    <fullName>EventQuery__c</fullName>
    <description>To get All Event records base on the criteria</description>
    <label>EventQuery</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>