SandBox-2/force-app/main/default/objects/pvEmailBatchConf__mdt/fields/ExcludeUserID__c.field-meta.xml
<CustomField>
    <fullName>ExcludeUserID__c</fullName>
    <description>Add multiple User ID with comma separated</description>
    <inlineHelpText>00123456711,001987654321</inlineHelpText>
    <label>ExcludeUserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>