SandBox-2/force-app/main/default/objects/pvEmailBatchConf__mdt/fields/SalesPlannerQuery__c.field-meta.xml
<CustomField>
    <fullName>SalesPlannerQuery__c</fullName>
    <description>Get All Sales Planner record based on the Account User ID</description>
    <label>SalesPlannerQuery</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>