SandBox-2/force-app/main/default/objects/pvEmailBatchConf__mdt/fields/SPTotalCount__c.field-meta.xml
<CustomField>
    <fullName>SPTotalCount__c</fullName>
    <label>SPTotalCount</label>
    <type>TextArea</type>
</CustomField>