SandBox-2/force-app/main/default/objects/pvEmailBatchConf__mdt/fields/TestingEmail__c.field-meta.xml
<CustomField>
    <fullName>TestingEmail__c</fullName>
    <description>If Testing email present then use this else it will come from User object</description>
    <label>TestingEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>