SandBox-2/force-app/main/default/objects/pvEmailBatchConf__mdt/fields/TypePicklistValues__c.field-meta.xml
<CustomField>
    <fullName>TypePicklistValues__c</fullName>
    <description>Type picklist value with comma seperated</description>
    <label>TypePicklistValues</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>