SandBox-2/force-app/main/default/objects/pvEmailBatchConf__mdt/fields/UserQuery__c.field-meta.xml
<CustomField>
    <fullName>UserQuery__c</fullName>
    <description>Get All User records based on the RAM User profile ID</description>
    <label>UserQuery</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>